--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
     <main>
 
         <section class="hero">
+            <div class="container">
             <!-- Герой -->
                         <h1 class="hero-title">Ефективні рішення для <br> вашого бізнесу</h1>
             <button type="button" class="hero-button">Замовити послугу</button>
-            
+            </div>
         </section>
         
                         <!-- Особливості -->
