--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 
 <body>
             <!-- Заголовок -->
-        <header>
+        <header class="header-portfolio">
         <div class="container main-nav">
             <nav class="header-nav">
                 <a href="" class="logo-link"><span class="span">Web</span>Studio</a>
@@ -65,70 +65,85 @@
     <button type="button" class="button-item">Маркетинг</button>
 </li>
     </ul>
-    </div>
-<div class="container">
-<ul class="list flex-container">
+    <ul class="list flex-container">
     <li class="flex-item">
         <a href="" class="link underline">
             <img src="./images/techno.jpg" alt="Веб-сайт" width="370">
-            <h2 class="header-img">Технокряк</h2>
+            <div class="header-text"> 
+            <h2 class="header-img techno">Технокряк</h2>
             <p class="text-img">Веб-сайт</p>
-        </a>
+            </div>
     </li>
        <li class="flex-item">
         <a href="" class="link underline">
             <img src="./images/basketball.jpg" alt="Дизайн" width="370">
+            <div class="header-text">
             <h2 class="header-img">Постер New Orlean vs Golden Star</h2>
             <p class="text-img">Дизайн</p>
+            </div>
         </a>
     </li>
     <li class="flex-item">
         <a href="" class="link underline">
             <img src="./images/restaurant.jpg" alt="Додаток" width="370">
+            <div class="header-text">
             <h2 class="header-img">Ресторан Seafood</h2>
             <p class="text-img">Додаток</p>
+            </div>
         </a>
     </li>
     <li class="flex-item">
         <a href="" class="link underline">
             <img src="./images/headphone.jpg" alt="Маркетинг" width="370">
+                        <div class="header-text">   
             <h2 class="header-img">Проєкт Prime</h2>
             <p class="text-img">Маркетинг</p>
+            </div>
         </a>
     </li>
     <li class="flex-item">
         <a href="" class="link underline">
             <img src="./images/boxes.jpg" alt="Коробки" width="370">
+                        <div class="header-text">
             <h2 class="header-img">Проєкт Boxes</h2>
             <p class="text-img">Додаток</p>
+            </div>
         </a>
     </li>
     <li class="flex-item">
         <a href="" class="link underline">
             <img src="./images/monitor.jpg" alt=" Монітор" width="370">
+                    <div class="header-text">
             <h2 class="header-img">Inspiration has no Borders</h2>
             <p class="text-img">Веб-сайт</p>
+            </div>
         </a>
     </li>
     <li class="flex-item">
         <a href="" class="link underline">
             <img src="./images/book.jpg" alt="Книжки" width="370">
+                <div class="header-text">
             <h2 class="header-img">Видання Limited Edition</h2>
             <p class="text-img">Дизайн</p>
+            </div>
         </a>
     </li>
     <li class="flex-item">
         <a href="" class="link underline">
             <img src="./images/label-tag.jpg" alt=" Етикетка" width="370">
+            <div class="header-text">
             <h2 class="header-img">Проєкт LAB</h2>
             <p class="text-img">Маркетинг</p>
+            </div>
         </a>
     </li>
     <li class="flex-item">
         <a href="" class="link underline">
             <img src="./images/computer-work.jpg" alt="Робота за комп" width="370">
+            <div class="header-text">
             <h2 class="header-img">Growing Business</h2>
             <p class="text-img">Додаток</p>
+            </div>
         </a>
     </li>
 </ul>
